syntax = "proto3";
package model;
option go_package = "project-employee/proto/model";

message Employee {
    string Id = 1;
    string Nik =2;
    string Name = 3;
}

message Company {
    string Id = 1;
    string Code = 2;
    string Name = 3;
    string Description = 4;
    string CompanyTaxNumber = 5;
}

message Position {
    string Id = 1;
    string Code = 2;
    string Name = 3;
    string Description = 4;
    string Level = 5;
}

message Unit {
    string Id = 1;
    string Code = 2;
    string Name = 3;
}

message AddEmployee {
    string PersonId = 1;
    string CompanyId = 2;
    string UnitId = 3;
    string PositionId = 4;
    string Nik = 5;
    string HiredDate = 6;
}

message Employees {
    repeated Employee Employee = 1;
}

message Companies {
    repeated Company Company = 1;
}

message Positions {
    repeated Position Position = 1;
}

message Units {
    repeated Unit Unit = 1;
}

message Empty{
    string Token = 1;
}

message ResponseAddEmployee {
    string Msg = 1;
}

service EmployeeService{
    rpc GetEmployees(Empty) returns(Employees);
    rpc GetCompanies(Empty) returns(Companies);
    rpc GetPositions(Empty) returns(Positions);
    rpc GetUnits(Empty) returns(Units); 
    rpc CreateEmployee(AddEmployee) returns(ResponseAddEmployee);
}

